use `System.Numerics`

--- a/src/dotnet/projects/production/Ankura.FNA/Ankura.FNA.csproj
+++ b/src/dotnet/projects/production/Ankura.FNA/Ankura.FNA.csproj
@@ -120,4 +120,8 @@
       <ProjectReference Include="..\Ankura\Ankura.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+    </ItemGroup>
+
 </Project>
