Include symbols for NuGet packages

--- a/src/dotnet/projects/production/Directory.Build.props
+++ b/src/dotnet/projects/production/Directory.Build.props
@@ -4,6 +4,8 @@
 
     <PropertyGroup>
         <IsPackable>true</IsPackable>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
 
 </Project>
