--- a/src/dotnet/projects/samples/Ankura.Samples.04-BufferOffsets/Ankura.Samples.04-BufferOffsets.csproj
+++ b/src/dotnet/projects/samples/Ankura.Samples.04-BufferOffsets/Ankura.Samples.04-BufferOffsets.csproj
@@ -2,7 +2,7 @@
 
     <!-- MSBuild project settings -->
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net5.0</TargetFramework>
         <OutputType>WinExe</OutputType>
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
