--- a/src/dotnet/projects/samples/Ankura.Samples.07-CubeTexturedDynamic/Ankura.Samples.07-CubeTexturedDynamic.csproj
+++ b/src/dotnet/projects/samples/Ankura.Samples.07-CubeTexturedDynamic/Ankura.Samples.07-CubeTexturedDynamic.csproj
@@ -19,17 +19,13 @@
 
     <!-- Project references -->
     <ItemGroup>
-        <ProjectReference Include="..\..\production\Ankura.FNA\Ankura.FNA.csproj" />
         <ProjectReference Include="..\..\production\Ankura\Ankura.csproj" />
     </ItemGroup>
 
     <!-- Assets -->
     <ItemGroup>
-        <None Update="Content/Shaders/**/*.xnb">
+        <None Update="Assets/Shaders/**/*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
-        <None Update="Content\Shaders\Main.xnb">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
 
