--- a/src/dotnet/projects/samples/Ankura.Samples.10-ParticlesInstancing/Ankura.Samples.10-ParticlesInstancing.csproj
+++ b/src/dotnet/projects/samples/Ankura.Samples.10-ParticlesInstancing/Ankura.Samples.10-ParticlesInstancing.csproj
@@ -19,13 +19,12 @@
 
     <!-- Project references -->
     <ItemGroup>
-        <ProjectReference Include="..\..\production\Ankura.FNA\Ankura.FNA.csproj" />
         <ProjectReference Include="..\..\production\Ankura\Ankura.csproj" />
     </ItemGroup>
 
     <!-- Assets -->
     <ItemGroup>
-        <None Update="Content/Shaders/**/*.xnb">
+        <None Update="Assets/Shaders/**/*">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
