--- a/src/dotnet/analysis/CodeAnalysis.targets
+++ b/src/dotnet/analysis/CodeAnalysis.targets
@@ -18,7 +18,7 @@
         <StyleCopSettingsFilePath>$(MSBuildThisFileDirectory)/StyleCop/$(StyleCopSettingsFileName)</StyleCopSettingsFilePath>
     </PropertyGroup>
     <ItemGroup Condition=" '$(EnableAnalyzers)' == 'true' AND '$(IncludeAnalyzersStyleCop)' == 'true' ">
-        <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="all" />
+        <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.261" PrivateAssets="all" />
         <AdditionalFiles Include="$(StyleCopSettingsFilePath)" Visible="false" />
         <None Include="$(StyleCopSettingsFilePath)" Link="Properties/$(StyleCopSettingsFileName)" />
     </ItemGroup>
