Move existing samples into `graphics` folder

--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.01-Clear/Ankura.Samples.Graphics.01-Clear.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.01-Clear/Ankura.Samples.Graphics.01-Clear.csproj
@@ -7,8 +7,8 @@
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Ankura.Samples.CubeTextured</RootNamespace>
-        <AssemblyName>Ankura.Samples.CubeTextured</AssemblyName>
+        <RootNamespace>Ankura.Samples.Clear</RootNamespace>
+        <AssemblyName>Ankura.Samples.Clear</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
@@ -19,14 +19,7 @@
 
     <!-- Project references -->
     <ItemGroup>
-        <ProjectReference Include="..\..\production\Ankura\Ankura.csproj" />
-    </ItemGroup>
-
-    <!-- Assets -->
-    <ItemGroup>
-        <None Update="Assets/Shaders/**/*">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </None>
+        <ProjectReference Include="..\..\..\production\Ankura\Ankura.csproj" />
     </ItemGroup>
 
 </Project>
