--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.09-CubeMultipleRenderTargets/Ankura.Samples.Graphics.09-CubeMultipleRenderTargets.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.09-CubeMultipleRenderTargets/Ankura.Samples.Graphics.09-CubeMultipleRenderTargets.csproj
@@ -7,8 +7,8 @@
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Ankura.Samples.ParticlesInstancing</RootNamespace>
-        <AssemblyName>Ankura.Samples.ParticlesInstancing</AssemblyName>
+        <RootNamespace>Ankura.Samples.CubeMultipleRenderTargets</RootNamespace>
+        <AssemblyName>Ankura.Samples.CubeMultipleRenderTargets</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
@@ -19,7 +19,7 @@
 
     <!-- Project references -->
     <ItemGroup>
-        <ProjectReference Include="..\..\production\Ankura\Ankura.csproj" />
+        <ProjectReference Include="..\..\..\production\Ankura\Ankura.csproj" />
     </ItemGroup>
 
     <!-- Assets -->
