--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.07-CubeTexturedDynamic/Ankura.Samples.Graphics.07-CubeTexturedDynamic.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.07-CubeTexturedDynamic/Ankura.Samples.Graphics.07-CubeTexturedDynamic.csproj
@@ -7,8 +7,8 @@
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Ankura.Samples.CubeTextured</RootNamespace>
-        <AssemblyName>Ankura.Samples.CubeTextured</AssemblyName>
+        <RootNamespace>Ankura.Samples</RootNamespace>
+        <AssemblyName>Ankura.Samples.Graphics.CubeTexturedDynamic</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
