--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.01-Clear/Ankura.Samples.Graphics.01-Clear.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.01-Clear/Ankura.Samples.Graphics.01-Clear.csproj
@@ -7,8 +7,8 @@
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Ankura.Samples.Clear</RootNamespace>
-        <AssemblyName>Ankura.Samples.Clear</AssemblyName>
+        <RootNamespace>Ankura.Samples</RootNamespace>
+        <AssemblyName>Ankura.Samples.Graphics.Clear</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
