--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.03-Rectangle/Ankura.Samples.Graphics.03-Rectangle.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.03-Rectangle/Ankura.Samples.Graphics.03-Rectangle.csproj
@@ -7,8 +7,8 @@
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Ankura.Samples.Rectangle</RootNamespace>
-        <AssemblyName>Ankura.Samples.Rectangle</AssemblyName>
+        <RootNamespace>Ankura.Samples</RootNamespace>
+        <AssemblyName>Ankura.Samples.Graphics.Rectangle</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
