--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.04-BufferOffsets/Ankura.Samples.Graphics.04-BufferOffsets.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.04-BufferOffsets/Ankura.Samples.Graphics.04-BufferOffsets.csproj
@@ -7,8 +7,8 @@
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Ankura.Samples.BufferOffsets</RootNamespace>
-        <AssemblyName>Ankura.Samples.BufferOffsets</AssemblyName>
+        <RootNamespace>Ankura.Samples</RootNamespace>
+        <AssemblyName>Ankura.Samples.Graphics.BufferOffsets</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
