--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.05-Cube/Ankura.Samples.Graphics.05-Cube.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.05-Cube/Ankura.Samples.Graphics.05-Cube.csproj
@@ -7,8 +7,8 @@
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Ankura.Samples.Cube</RootNamespace>
-        <AssemblyName>Ankura.Samples.Cube</AssemblyName>
+        <RootNamespace>Ankura.Samples</RootNamespace>
+        <AssemblyName>Ankura.Samples.Graphics.Cube</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
