--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.08-CubeRenderTarget/Ankura.Samples.Graphics.08-CubeRenderTarget.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.08-CubeRenderTarget/Ankura.Samples.Graphics.08-CubeRenderTarget.csproj
@@ -7,8 +7,8 @@
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Ankura.Samples.CubeRenderTarget</RootNamespace>
-        <AssemblyName>Ankura.Samples.CubeRenderTarget</AssemblyName>
+        <RootNamespace>Ankura.Samples</RootNamespace>
+        <AssemblyName>Ankura.Samples.Graphics.CubeRenderTarget</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
