--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.09-CubeMultipleRenderTargets/Ankura.Samples.Graphics.09-CubeMultipleRenderTargets.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.09-CubeMultipleRenderTargets/Ankura.Samples.Graphics.09-CubeMultipleRenderTargets.csproj
@@ -7,8 +7,8 @@
         <PublishReadyToRun>false</PublishReadyToRun>
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-        <RootNamespace>Ankura.Samples.CubeMultipleRenderTargets</RootNamespace>
-        <AssemblyName>Ankura.Samples.CubeMultipleRenderTargets</AssemblyName>
+        <RootNamespace>Ankura.Samples</RootNamespace>
+        <AssemblyName>Ankura.Samples.Graphics.CubeMultipleRenderTargets</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
