--- a/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.06-CubeTexture2D/Ankura.Samples.Graphics.06-CubeTexture2D.csproj
+++ b/src/dotnet/projects/samples/graphics/Ankura.Samples.Graphics.06-CubeTexture2D/Ankura.Samples.Graphics.06-CubeTexture2D.csproj
@@ -8,7 +8,7 @@
         <TieredCompilation>false</TieredCompilation>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>Ankura.Samples</RootNamespace>
-        <AssemblyName>Ankura.Samples.Graphics.CubeTexturedDynamic</AssemblyName>
+        <AssemblyName>Ankura.Samples.Graphics.CubeTexture2D</AssemblyName>
     </PropertyGroup>
 
     <!-- Custom project settings -->
