--- a/src/dotnet/projects/Common.targets
+++ b/src/dotnet/projects/Common.targets
@@ -1,15 +1,5 @@
 <Project>
 
-    <!-- Properties folder -->
-    <PropertyGroup>
-        <DotSettingsFilePath>$(MSBuildProjectFile).DotSettings</DotSettingsFilePath>
-    </PropertyGroup>
-    <ItemGroup>
-        <None Condition="Exists('$(DotSettingsFilePath)')" Update="$(DotSettingsFilePath)" Visible="false" />
-        <None Condition="Exists('$(DotSettingsFilePath)')" Include="$(DotSettingsFilePath)" Link="Properties/$(DotSettingsFilePath)" />
-    </ItemGroup>
-
-    <!-- Code analysis -->
-    <Import Project="$(MSBuildThisFileDirectory)/../analysis/CodeAnalysis.targets" />
+    <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove('$(MSBuildProjectDirectory)', '.gitignore'))/ext/my-msbuild/My-MSBuild.props" />
 
 </Project>
