--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "ext/native-tools-cs"]
 	path = ext/native-tools-cs
-	url = git@github.com:lithiumtoast/native-tools-cs.git
+	url = https://github.com/lithiumtoast/native-tools-cs.git
 [submodule "ext/my-msbuild"]
 	path = ext/my-msbuild
-	url = git@github.com:lithiumtoast/my-msbuild.git
+	url = https://github.com/lithiumtoast/my-msbuild.git
