--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "ext/assetyard"]
 	path = ext/assetyard
 	url = https://github.com/craftworkgames/assetyard.git
+[submodule "ext/c2cs"]
+	path = ext/c2cs
+	url = https://github.com/lithiumtoast/c2cs
