--- a/src/dotnet/projects/production/Katabasis.Framework/Katabasis.Framework.csproj
+++ b/src/dotnet/projects/production/Katabasis.Framework/Katabasis.Framework.csproj
@@ -13,16 +13,6 @@
 		<EnableAnalyzersStyleCop>true</EnableAnalyzersStyleCop>
 	</PropertyGroup>
 
-	<!-- native-tools-cs -->
-	<PropertyGroup>
-		<NativeToolsSourcePath>$(GitRepositoryPath)/ext/native-tools-cs/src</NativeToolsSourcePath>
-	</PropertyGroup>
-	<ItemGroup>
-		<Compile Include="$(NativeToolsSourcePath)/**/*">
-			<Link>native-tools-cs/%(Filename)%(Extension)</Link>
-		</Compile>
-	</ItemGroup>
-
 	<!-- Stock effects files emedded into assembly -->
 	<ItemGroup>
 		<EmbeddedResource Include="Katabasis/Graphics/Effect/StockEffects/FXB/*.fxb" />
@@ -132,6 +122,9 @@
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 			<PackagePath>runtimes/linux-x64/native/libtheorafile.so</PackagePath>
 		</Content>
+	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\..\..\..\..\ext\c2cs\src\cs\production\C2CS.Runtime\C2CS.Runtime.csproj" />
 	</ItemGroup>
 
 </Project>
