--- a/src/cs/production/Katabasis.Extended/Katabasis.Extended.csproj
+++ b/src/cs/production/Katabasis.Extended/Katabasis.Extended.csproj
@@ -3,12 +3,10 @@
 	<!-- MSBuild project settings -->
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
-		<RootNamespace />
 	</PropertyGroup>
 
 	<!-- My-MSBuild settings -->
 	<PropertyGroup>
-		<EnableRootNamespace>false</EnableRootNamespace>
 		<EnableAnalyzers>true</EnableAnalyzers>
 		<EnableAnalyzersStyleCop>true</EnableAnalyzersStyleCop>
 	</PropertyGroup>
@@ -17,5 +15,15 @@
 	<ItemGroup>
 	  <ProjectReference Include="..\Katabasis.Framework\Katabasis.Framework.csproj" />
 	</ItemGroup>
+	
+	<!-- NuGet packages -->
+	<ItemGroup>
+	  <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
+	</ItemGroup>
+
+	<!-- Disable warnins -->
+	<PropertyGroup>
+		<NoWarn>CA1051</NoWarn>
+	</PropertyGroup>
 
 </Project>
