--- a/src/cs/samples/graphics/Katabasis.Samples.Graphics.11-CubeTexture3D/Katabasis.Samples.Graphics.11-CubeTexture3D.csproj
+++ b/src/cs/samples/graphics/Katabasis.Samples.Graphics.11-CubeTexture3D/Katabasis.Samples.Graphics.11-CubeTexture3D.csproj
@@ -9,6 +9,8 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>Katabasis.Samples</RootNamespace>
         <AssemblyName>Katabasis.Samples.Graphics.CubeTexture3D</AssemblyName>
+        <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
     <!-- Custom project settings -->
