--- a/src/cs/samples/graphics/Katabasis.Samples.Graphics.01-Clear/Katabasis.Samples.Graphics.01-Clear.csproj
+++ b/src/cs/samples/graphics/Katabasis.Samples.Graphics.01-Clear/Katabasis.Samples.Graphics.01-Clear.csproj
@@ -9,6 +9,8 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>Katabasis.Samples</RootNamespace>
         <AssemblyName>Katabasis.Samples.Graphics.Clear</AssemblyName>
+        <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
     <!-- Custom project settings -->
@@ -16,10 +18,10 @@
         <EnableAnalyzers>true</EnableAnalyzers>
         <IncludeAnalyzersStyleCop>true</IncludeAnalyzersStyleCop>
     </PropertyGroup>
-    <ItemGroup>
-      <ProjectReference Include="..\..\..\production\Katabasis.Framework\Katabasis.Framework.csproj" />
-    </ItemGroup>
 
     <!-- Project references -->
+    <ItemGroup>
+        <ProjectReference Include="..\..\..\production\Katabasis.Framework\Katabasis.Framework.csproj" />
+    </ItemGroup>
 
 </Project>
