--- a/src/cs/samples/graphics/Katabasis.Samples.Graphics.03-Rectangle/Katabasis.Samples.Graphics.03-Rectangle.csproj
+++ b/src/cs/samples/graphics/Katabasis.Samples.Graphics.03-Rectangle/Katabasis.Samples.Graphics.03-Rectangle.csproj
@@ -9,6 +9,8 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>Katabasis.Samples</RootNamespace>
         <AssemblyName>Katabasis.Samples.Graphics.Rectangle</AssemblyName>
+        <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
     <!-- Custom project settings -->
