--- a/src/cs/samples/graphics/Katabasis.Samples.Graphics.08-CubeDynamicTexture2D/Katabasis.Samples.Graphics.08-CubeDynamicTexture2D.csproj
+++ b/src/cs/samples/graphics/Katabasis.Samples.Graphics.08-CubeDynamicTexture2D/Katabasis.Samples.Graphics.08-CubeDynamicTexture2D.csproj
@@ -9,6 +9,8 @@
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <RootNamespace>Katabasis.Samples</RootNamespace>
         <AssemblyName>Katabasis.Samples.Graphics.CubeTexture2DDynamic</AssemblyName>
+        <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
+        <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     </PropertyGroup>
 
     <!-- Custom project settings -->
